# routes/api.php
@@ -4,12 +4,12 @@ use App\Http\Controllers\Auth\AuthController;
 use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\BoardsController;
 use App\Http\Controllers\BoardSectionController;
+use App\Http\Controllers\CardController;
 use App\Http\Controllers\ImageController;
 use App\Http\Controllers\SectionController;
 use App\Http\Controllers\TeamController;
 use App\Http\Controllers\TeamMemberController;
 use App\Http\Controllers\UserController;
-use App\Http\Controllers\UserDashboardController;
 use App\Http\Controllers\WorkspaceController;
 use App\Http\Controllers\WorkspaceMemberController;
 use Illuminate\Http\Request;
@@ -47,6 +47,7 @@ Route::middleware('auth:api')->group( function () {
         Route::resource('boardSections', BoardSectionController::class);
         Route::get('list-members-by-workspace-id/{workspaceId}', [WorkspaceMemberController::class, 'listMembersByWorkspaceId']);
         Route::get('list-members', [UserController::class, 'listMembers']);
+        Route::resource('cards', CardController::class);
     });
     Route::get('workspaces', [WorkspaceController::class, 'index']);
     Route::get('workspaces/{workspaces}', [WorkspaceController::class, 'show']);
